migration to java 1.8 + multitype population